Deprecate 'defaultOptions' in favor of "merged" 'options'
In order to provide consistency, get rid of the “special”
`defaultOptions` property. This way the same attribute names can be
defined as properties when `.extend()`ing and they’ll work the same
way. Several tests were added to verify this behavior. Documentation
was also updated.

--- a/tests/dummy/app/templates/addon-components/froala-editor.hbs
+++ b/tests/dummy/app/templates/addon-components/froala-editor.hbs
@@ -233,7 +233,7 @@ export default Ember.Controller.extend({
     <ol>
       <li>Attribute options <code>&#123;&#123;froala-editor theme="red"&#125;&#125;</code></li>
       <li>Options object/hash <code>&#123;&#123;froala-editor options=(hash theme="red")&#125;&#125;</code></li>
-      <li>Defaults concept <code>defaultOptions: { theme:"red" }</code></li>
+      <li>Defaults concept <code>options: { theme:"red" }</code></li>
     </ol>
 
 
