--- a/addon/templates/components/froala-editor.hbs
+++ b/addon/templates/components/froala-editor.hbs
@@ -1,3 +1,3 @@
-{{!-- content updated directly on the editor instance --}}
+{{!-- 'content' changes will be updated directly on the editor instance --}}
 {{!-- https://www.froala.com/wysiwyg-editor/docs/methods#html.set --}}
 <div class="froala-editor-instance">{{{unbound content}}}</div>
