--- a/tests/dummy/app/templates/addon/configuration.hbs
+++ b/tests/dummy/app/templates/addon/configuration.hbs
@@ -15,9 +15,8 @@
     </p>
 
 
-    <pre>/*jshint node:true*/
-/* global require, module */
-var EmberApp = require('ember-cli/lib/broccoli/ember-app');
+    <pre>/* eslint-env node */
+const EmberAddon = require('ember-cli/lib/broccoli/ember-addon');
 
 module.exports = function(defaults) {
   var app = new EmberApp(defaults, {
