Use `ember-cli-app-version` on docs site

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -42,7 +42,7 @@
 
 
     <p class="navbar-text navbar-right hidden-xs">
-      {{addonVersion}}
+      v{{app-version hideSha=true}}
       <a href="https://github.com/froala/ember-froala-editor" target="_blank" class="navbar-link">
         <i class="fa fa-github-square"></i>
       </a>
