--- a/tests/dummy/app/templates/addon/test-helper.hbs
+++ b/tests/dummy/app/templates/addon/test-helper.hbs
@@ -9,7 +9,7 @@
 
     <p class="lead">
       This addon also provides a convenient test helper (<code>fillInFroalaEditor()</code>) to interact with the editor in acceptance tests.
-      It functions similar to the <a href="http://emberjs.com/api/classes/Ember.Test.html#method_fillIn" target="_blank">ember provided <code>fillIn()</code> test helper</a>.
+      It functions similar to the <a href="https://github.com/emberjs/ember-test-helpers/blob/master/API.md#fillin" target="_blank">ember provided <code>fillIn()</code> test helper</a>.
       To use this helper follow the below steps.
     </p>
 
@@ -36,7 +36,7 @@
       </tr>
       <tr>
         <th scope="row">html</th>
-        <td>string | <a href="http://emberjs.com/api/classes/Ember.String.html#method_htmlSafe" target="_blank">SafeString</a></td>
+        <td>string | <a href="https://emberjs.com/api/ember/2.18/classes/@ember%2Ftemplate/methods/htmlSafe?anchor=htmlSafe" target="_blank">SafeString</a></td>
         <td>String of HTML, or a SafeString of HTML to set on the editor.</td>
       </tr>
     </tbody>
@@ -57,7 +57,7 @@
 
 
     <p>
-      To use the helper in acceptance tests you need to register it by importing it in your <code>/tests/helpers/start-app.js</code> file, just like you would with <a href="https://guides.emberjs.com/v2.14.0/testing/acceptance/#toc_custom-test-helpers" target="_blank">your own custom helpers</a>. The path you'll use to import is <code>ember-froala-editor/test-support/helpers/fill-in-froala-editor</code>.
+      To use the helper in acceptance tests you need to register it by importing it in your <code>/tests/helpers/start-app.js</code> file, just like you would with <a href="https://guides.emberjs.com/v2.18.0/testing/acceptance/#toc_custom-test-helpers" target="_blank">your own custom helpers</a>. The path you'll use to import is <code>ember-froala-editor/test-support/helpers/fill-in-froala-editor</code>.
     </p>
 
 
